imclient/marslib/include/WFClient.h



//general function callback
typedef void (WFCAPI *fun_general_void_success_callback)(void *pObject, int objectDataType);

typedef void (WFCAPI *fun_general_string_success_callback)(void *pObject, int objectDataType, const char *cval, size_t val_len);

typedef void (WFCAPI *fun_general_error_callback)(void *pObject, int objectDataType, int errorCode);

extern "C" PROTOWRAPPER_API void WFCAPI getRemoteDomains(fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObj, int objectDataType);



extern "C" PROTOWRAPPER_API void WFCAPI getConversationFiles(int conversationType, const char *ctarget, size_t target_len, int line, const char *cfromUser, size_t fromUser_len, int64_t messageUid, int order, int count, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObj, int objectDataType);

extern "C" PROTOWRAPPER_API void WFCAPI getMyFiles(int64_t messageUid, int order, int count, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObj, int objectDataType);

extern "C" PROTOWRAPPER_API void WFCAPI deleteFileRecord(int64_t messageUid, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObj, int objectDataType);

extern "C" PROTOWRAPPER_API void WFCAPI searchFiles(const char *ckeyword, size_t keyword_len, int conversationType, const char *ctarget, size_t target_len, int line, const char *cfromUser, size_t fromUser_len, int64_t messageUid, int order, int count, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObj, int objectDataType);

extern "C" PROTOWRAPPER_API void WFCAPI searchMyFiles(const char *ckeyword, size_t keyword_len, int64_t messageUid, int order, int count, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObj, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI getAuthorizedMediaUrl(long long messageUid, int mediaType, const char *cmediaPath, size_t mediaPath_len, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObj, int objectDataType);



extern "C" PROTOWRAPPER_API void WFCAPI getAuthCode(const char *capplicationId, size_t applicationId_len, int type, const char *chost, size_t host_len, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObj, int objectDataType);

extern "C" PROTOWRAPPER_API void WFCAPI configApplication(const char *capplicationId, size_t applicationId_len, int type, int64_t timestamp, const char *nonce, size_t nonce_len, const char *csignature, size_t signature_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObj, int objectDataType);


extern "C" PROTOWRAPPER_API bool WFCAPI isCommercialServer();

extern "C" PROTOWRAPPER_API bool WFCAPI isReceiptEnabled();

extern "C" PROTOWRAPPER_API bool WFCAPI isGroupReceiptEnabled();

extern "C" PROTOWRAPPER_API bool WFCAPI isGlobalDisableSyncDraft();

extern "C" PROTOWRAPPER_API bool WFCAPI isMeshEnabled();


extern "C" PROTOWRAPPER_API const char* WFCAPI getMyCustomState(size_t *retlen);

extern "C" PROTOWRAPPER_API void WFCAPI setMyCustomState(const char *cstate, size_t state_len, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);

extern "C" PROTOWRAPPER_API void WFCAPI watchOnlineState(int conversationType, const char** ctargets, const size_t* targetLengths, size_t targetCount, int watchDuration, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObj, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI unwatchOnlineState(int conversationType, const char** ctargets, const size_t* targetLengths, size_t targetCount, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObj, int objectDataType);


extern "C" PROTOWRAPPER_API bool WFCAPI isEnableUserOnlineState();


extern "C" PROTOWRAPPER_API void WFCAPI sendConferenceRequest(long long sessionId, const char *croomId, size_t roomId_len, const char *crequest, size_t request_len, bool advance, const char *cdata, size_t data_len, fun_general_string_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI requireLock(const char *clockId, size_t lockId_len, int duration, fun_general_void_success_callback successBlock, fun_general_error_callback errorBlock, void *pObject, int objectDataType);