imclient/lib/src/ffi/wfclient_bindings.dart


  late final void Function(Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getRemoteDomains =
      _lib.lookupFunction<Void Function(Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getRemoteDomains');

  late final void Function(int, Pointer<Char>, int, int, Pointer<Char>, int, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getConversationFiles =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Pointer<Char>, Size, Int64, Int32, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, int, Pointer<Char>, int, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getConversationFiles');

  late final void Function(int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getMyFiles =
      _lib.lookupFunction<Void Function(Int64, Int32, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getMyFiles');

  late final void Function(int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) deleteFileRecord =
      _lib.lookupFunction<Void Function(Int64, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('deleteFileRecord');

  late final void Function(Pointer<Char>, int, int, Pointer<Char>, int, int, Pointer<Char>, int, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) searchFiles =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int32, Pointer<Char>, Size, Int32, Pointer<Char>, Size, Int64, Int32, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, Pointer<Char>, int, int, Pointer<Char>, int, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('searchFiles');

  late final void Function(Pointer<Char>, int, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) searchMyFiles =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int64, Int32, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('searchMyFiles');

  late final void Function(int, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getAuthorizedMediaUrl =
      _lib.lookupFunction<Void Function(Int64, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getAuthorizedMediaUrl');

  late final void Function(Pointer<Char>, int, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getAuthCode =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getAuthCode');

  late final void Function(Pointer<Char>, int, int, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) configApplication =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int32, Int64, Pointer<Char>, Size, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, int, Pointer<Char>, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('configApplication');

  late final bool Function() isCommercialServer =
      _lib.lookupFunction<Bool Function(), bool Function()>('isCommercialServer');

  late final bool Function() isReceiptEnabled =
      _lib.lookupFunction<Bool Function(), bool Function()>('isReceiptEnabled');

  late final bool Function() isGroupReceiptEnabled =
      _lib.lookupFunction<Bool Function(), bool Function()>('isGroupReceiptEnabled');

  late final bool Function() isGlobalDisableSyncDraft =
      _lib.lookupFunction<Bool Function(), bool Function()>('isGlobalDisableSyncDraft');

  late final bool Function() isMeshEnabled =
      _lib.lookupFunction<Bool Function(), bool Function()>('isMeshEnabled');

  late final Pointer<Char> Function(Pointer<Size>) getMyCustomState =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getMyCustomState');

  late final void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setMyCustomState =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setMyCustomState');

  late final void Function(int, Pointer<Pointer<Char>>, Pointer<Size>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) watchOnlineState =
      _lib.lookupFunction<Void Function(Int32, Pointer<Pointer<Char>>, Pointer<Size>, Size, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Pointer<Char>>, Pointer<Size>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('watchOnlineState');

  late final void Function(int, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) unwatchOnlineState =
      _lib.lookupFunction<Void Function(Int32, Pointer<Pointer<Char>>, Pointer<Size>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('unwatchOnlineState');

  late final bool Function() isEnableUserOnlineState =
      _lib.lookupFunction<Bool Function(), bool Function()>('isEnableUserOnlineState');

  late final void Function(int, Pointer<Char>, int, Pointer<Char>, int, bool, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) sendConferenceRequest =
      _lib.lookupFunction<Void Function(Int64, Pointer<Char>, Size, Pointer<Char>, Size, Bool, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, Pointer<Char>, int, bool, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('sendConferenceRequest');

  late final void Function(Pointer<Char>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) requireLock =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('requireLock');
